tests/final/expect/13__ir_reject_parser_recovery_switch_missing_lbrace.pdiag
ParserDiagnostics:
code=1000 line=4 column=5 length=4 kind=0
code=1000 line=4 column=5 length=4 kind=0
code=1000 line=7 column=5 length=7 kind=0
